KAlarm Change Log

=== Version 2.1.8 --- 23 May 2009 ===
- Fix crash on exit from birthday import dialogue.
- Fix crash when an alarm is open for edit when its last occurrence triggers,
  and the edit is then saved.

=== Version 2.1.7 (KDE 4.2.3) --- 29 April 2009 ===
- Fix recurring alarms being missed when deferred to earlier than next due alarm,
  when next due alarm is earlier than the next recurrence.
- Fix crash at startup if a non-recurring cancel-if-late alarm has been missed.
- Fix speech mode not working when alarm messages are displayed.
- Fix KAlarm hanging sometimes while trying to play an audio file.
- Fix crash when KAlarm quits.
- Fix memory leak with undo/redo.

=== Version 2.1.6 (KDE 4.2.2) --- 18 March 2009 ===
- Fix memory leaks.
- Fix crash when KAlarm quits.

=== Version 2.1.5 (KDE 4.2.1) --- 7 February 2009 ===
- Disable inapplicable alarm types in alarm edit dialogue Load Template list.
- Prevent multiple identical error messages being displayed for the same alarm.
- Fix possible crash on alarm refresh, or removal or disabling of a resource.

=== Version 2.1.4 (KDE 4.2) --- 18 January 2009 ===
- Prevent corrupt alarms if deferral reinstates from archived alarm instead of
  from the displaying calendar.
- Ignore events in calendar without usable alarms (which prevents them getting
  stuck in the alarm list, and fixes high CPU usage).
- Show error message when New Template selected but no writable resource exists.
- Fix crash when iCalendar item is dragged and dropped onto KAlarm.
- Make New Alarm shortcuts work.
- Fix alarms not being saved if created by drag-and-drop but not edited further.

=== Version 2.1.3 (KDE 4.2 RC1) --- 5 January 2009 ===
- Fix invalid alarm remaining in calendar when pre-alarm action failure message
  is acknowledged before the alarm is deferred.

=== Version 2.1.2 --- 27 December 2008 ===
- New KAlarm icon.
- Distinguish disabled from enabled alarm colour when highlighted in alarm list.