@@ -4,6 +4,7 @@ KAlarm Change Log
 - Fix crash on exit from birthday import dialogue.
 - Fix crash when an alarm is open for edit when its last occurrence triggers,
   and the edit is then saved.
+- Fix another possible crash when KAlarm quits.
 
 === Version 2.1.7 (KDE 4.2.3) --- 29 April 2009 ===
 - Fix recurring alarms being missed when deferred to earlier than next due alarm,
